Create todo view

--- a/src/style.sass
+++ b/src/style.sass
@@ -88,6 +88,9 @@ h4
     flex: 50%
     padding: 1.25rem
 
+.hidden
+    display: none
+
 .flex
     display: flex
 
@@ -104,6 +107,21 @@ h4
 
 .task-section
     flex: 80%
+    row-gap: 2rem
+
+.task-wrapper
+    width: 80%
+    min-width: 80%
+    row-gap: 1rem
+
+    .todo-item
+        display: flex
+        column-gap: 0.5rem
+        justify-content: space-between
+        padding: 0 0.5rem
+
+        p:first-of-type
+            flex: 1 2 90%
 
 .ghost-input
     display: block
