Fix due date display for tasks

--- a/src/style.sass
+++ b/src/style.sass
@@ -145,6 +145,9 @@ h4
     align-items: center
     row-gap: 2rem
 
+    .box
+        padding: 0.5rem
+
 .task-wrapper
     width: 80%
     min-width: 80%
@@ -193,6 +196,9 @@ h4
     label
         padding-right: 0.5rem
 
+.form-control
+    column-gap: 10rem
+
 .radio-header
     padding-right: 1rem
     font-weight: 600
@@ -207,7 +213,6 @@ h4
     padding: 10px 30px
     min-width: 30%
     max-width: 40%
-    margin-top: 1rem
     -webkit-transition: all 0.1s ease-in-out
     -moz-transition: all 0.1s ease-in-out
     -ms-transition: all 0.1s ease-in-out
