--- a/src/style.sass
+++ b/src/style.sass
@@ -1,3 +1,9 @@
+$black: #363839
+$lightgray: #9c9e9f
+$gray: #bdc1c6
+$white: #fff
+$green: #06842c
+
 *
     box-sizing: border-box
 
@@ -163,11 +169,82 @@ h4
         overflow: hidden
         transition: height 0.2s ease
 
-        &:hover
-            cursor: pointer
+        header
+            align-items: center
+            column-gap: 1rem
+            min-height: 2rem
 
-        p:first-of-type
-            flex: 1 2 90%
+            input[type="checkbox"]
+                flex-basis: 3%
+                position: relative
+                width: 1.2rem
+                height: 1.5em
+                color: $black
+                border: 1px solid $gray
+                border-radius: 4px
+                appearance: none
+                outline: 0
+                cursor: pointer
+                transition: background 175ms cubic-bezier(0.1, 0.1, 0.25, 1)
+
+                &::before
+                    position: absolute
+                    content: ''
+                    display: block
+                    top: 2px
+                    left: 6px
+                    width: 3px
+                    height: 10px
+                    border-style: solid
+                    border-color: $white
+                    border-width: 0 2px 2px 0
+                    transform: rotate(45deg)
+                    opacity: 0
+
+                &:checked
+                    color: $white
+                    border-color: $green
+                    background: $green
+                    &::before
+                        opacity: 1
+
+                    ~ label::before
+                        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%)
+
+            label
+                flex-basis: 82%
+                min-width: 0
+                text-overflow: clip
+                overflow: hidden
+                position: relative
+                cursor: pointer
+                font-size: 0.9rem
+                font-weight: 600
+                user-select: none
+
+                &::before
+                    position: absolute
+                    content: attr(data-content)
+                    color: $lightgray
+                    clip-path: polygon(0 0, 0 0, 0% 100%, 0 100%)
+                    text-decoration: line-through
+                    text-decoration-thickness: 3px
+                    text-decoration-color: $black
+                    transition: clip-path 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94)
+
+            .todo-date
+                color: #00000091
+                font-size: 0.8rem
+                text-align: right
+
+                &:hover
+                    cursor: pointer
+
+                p:first-of-type
+                    flex: 1 2 90%
+
+        .todo-desc
+            margin-left: 4px
 
 .todo-item.todo-expanded
     height: fit-content
@@ -286,7 +363,6 @@ h4
 
     100%
         transform: translateX(0%)
-
 
 @keyframes reveal
     0%
