Create delete task DOM functionality

--- a/src/style.sass
+++ b/src/style.sass
@@ -192,7 +192,7 @@ h4
                     content: ''
                     display: block
                     top: 2px
-                    left: 6px
+                    left: 7px
                     width: 3px
                     height: 10px
                     border-style: solid
@@ -245,6 +245,17 @@ h4
 
         .todo-desc
             margin-left: 4px
+
+        footer
+            justify-content: flex-end
+            padding-bottom: 0.5rem
+
+            .todo-action
+                padding: 0 0.5rem
+
+            .fa-trash, .fa-edit
+                cursor: pointer
+                color: #00000091
 
 .todo-item.todo-expanded
     height: fit-content
