--- a/src/style.sass
+++ b/src/style.sass
@@ -3,6 +3,7 @@ $lightgray: #9c9e9f
 $gray: #bdc1c6
 $white: #fff
 $green: #06842c
+$blue: #485fc7
 
 *
     box-sizing: border-box
@@ -164,10 +165,11 @@ h4
         z-index: 1000
         column-gap: 0.5rem
         justify-content: space-between
-        padding: 0 0.5rem
+        padding: 0.5rem 0.5rem 0
         height: 3rem
         overflow: hidden
         transition: height 0.2s ease
+        border-radius: 6px
 
         header
             align-items: center
@@ -203,8 +205,8 @@ h4
 
                 &:checked
                     color: $white
-                    border-color: $green
-                    background: $green
+                    border-color: $blue
+                    background: $blue
                     &::before
                         opacity: 1
 
@@ -331,6 +333,33 @@ h4
     &:hover
         border: 2px solid #515151
 
+.overlay
+    position: fixed
+    display: none
+    width: 100%
+    height: 100%
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    background-color: rgba(0,0,0,0.5)
+    z-index: 9999
+    cursor: pointer
+
+    .edit-form
+        position: absolute
+        z-index: 9999999
+        top: 50%
+        left: 50%
+        font-size: 50px
+        color: white
+        background-color: white
+        transform: translate(-50%,-50%)
+        -ms-transform: translate(-50%,-50%)
+
+        .form-control
+            column-gap: 9rem
+
 .sidebar
     flex: 25%
     font-size: 1rem
@@ -391,4 +420,4 @@ h4
 
     100%
         opacity: 0
-        transform: translateY(-20px)
+        transform: translateY(-5px)
