--- a/src/style.sass
+++ b/src/style.sass
@@ -199,11 +199,18 @@ h4
 
         header
             align-items: center
-            column-gap: 1rem
+            justify-content: space-between
             min-height: 2rem
 
+            .checkbox-wrapper
+                align-items: center
+                flex-basis: 90%
+                max-width: 90%
+                overflow-wrap: break-word
+
             input[type="checkbox"]
-                flex-basis: 3%
+                flex-basis: 1.2rem
+                margin-right: 0.5rem   
                 position: relative
                 width: 1.2rem
                 height: 1.5em
@@ -240,7 +247,6 @@ h4
                         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%)
 
             label
-                flex-basis: 82%
                 min-width: 0
                 text-overflow: clip
                 overflow: hidden
@@ -261,6 +267,7 @@ h4
                     transition: clip-path 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94)
 
             .todo-date
+                flex-basis: 10%
                 color: #00000091
                 font-size: 0.8rem
                 text-align: right
