--- a/src/style.sass
+++ b/src/style.sass
@@ -180,6 +180,12 @@ h4
 
     .box
         padding: 0.5rem
+    
+    .form-wrapper
+        max-width: 50rem
+
+        textarea
+            max-width: 45rem
 
 .task-wrapper
     width: 74%
